--- a/index.html
+++ b/index.html
@@ -13,29 +13,72 @@
   </head>
 
   <body>
-    <header>
-      <h1>Primi passi col DOM</h1>
+    <header class="text-center bg-info py-2">
+      <h1>nome repo: js-dom-1</h1>
     </header>
     <main>
-      <div class="container">
+      <div class="container py-4">
         <div class="row">
           <div class="col-12">
-            <p>
-              Inseriamo in pagina l’immagine della lampadina spenta che trovate
-              in allegato e accanto un bottone con la scritta “Accendi”.
+            <div class="card">
+              <div class="card-header text-center">
+                <h3>Primi passi col DOM</h3>
+              </div>
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-12 col-md-6">
+                    <h4 class="text-primary">Consegna:</h4>
+                    <p>
+                      Inseriamo in pagina l’immagine della lampadina spenta che
+                      trovate
+                      in allegato e accanto un bottone con la scritta “Accendi”.
 
-              Al click del bottone, la lampadina dovrà accendersi (dovremo
-              quindi utilizzare l’immagine della lampadina accesa, sempre in
-              allegato)
-            </p>
+                      Al click del bottone, la lampadina dovrà accendersi
+                      (dovremo
+                      quindi utilizzare l’immagine della lampadina accesa,
+                      sempre in
+                      allegato)
+                    </p>
+                    <h4 class="text-success">Bonus</h4>
+                    <p>Facciamo accendi e spegni:</p>
+                    <ul>
+                      <li>
+                        Al primo click la lampadina si accende e nel bottone
+                        compare la scritta "Spegni"
+                      </li>
+                      <li>Al secondo click la lampadina si spegne e nel bottone
+                        compare la scritta "Accendi"</li>
+                      <li>E così via...</li>
+                    </ul>
+
+                    <p>Per fare questo bonus potremmo aver bisogno di del metodo
+                      string.includes()</p>
+                  </div>
+                  <div class="col-12 col-md-6">
+                    <div class="row">
+                      <div
+                        class="col-4 d-flex align-content-center justify-content-center">
+                        <button class="btn btn-danger"
+                          id="toggle-light">accendi</button>
+                      </div>
+                      <div class="col-8">
+                        <img src="assets/img/white_lamp.png" alt srcset>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+
       </div>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
       crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
