--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                   </div>
                   <div class="col-12 col-md-6">
                     <div class="row">
-                      <div
-                        class="col-4 d-flex align-content-center justify-content-center">
+                      <div class="col-12 col-md-4">
                         <button class="btn btn-danger"
                           id="toggle-light">accendi</button>
                       </div>
-                      <div class="col-8">
-                        <img src="assets/img/white_lamp.png" alt srcset>
+                      <div class="col-12 col-md-8">
+                        <img src="assets/img/white_lamp.png" alt
+                          id="light-bulb">
                       </div>
                     </div>
                   </div>
