--- a/index.html
+++ b/index.html
@@ -55,12 +55,13 @@
                       string.includes()</p>
                   </div>
                   <div class="col-12 col-md-6">
-                    <div class="row">
-                      <div class="col-12 col-md-4">
+                    <div class="row h-100">
+                      <div
+                        class="col-12 col-lg-4 d-flex justify-content-center">
                         <button class="btn btn-danger"
                           id="toggle-light">accendi</button>
                       </div>
-                      <div class="col-12 col-md-8">
+                      <div class="col-12 col-lg-8">
                         <img src="assets/img/white_lamp.png" alt
                           id="light-bulb">
                       </div>
