--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row">
           <div class="col-12">
             <div class="card">
-              <div class="card-header text-center">
+              <div class="card-header text-center bg-primary text-white">
                 <h3>Primi passi col DOM</h3>
               </div>
               <div class="card-body">
