--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
               <div class="card-header text-center bg-primary text-white">
                 <h3>Primi passi col DOM</h3>
               </div>
-              <div class="card-body">
-                <div class="row">
+              <div class="card-body container">
+                <div class="row g-0 ">
                   <div class="col-12 col-md-6">
                     <h4 class="text-primary">Consegna:</h4>
                     <p>
@@ -54,14 +54,14 @@
                     <p>Per fare questo bonus potremmo aver bisogno di del metodo
                       string.includes()</p>
                   </div>
-                  <div class="col-12 col-md-6">
-                    <div class="row h-100">
+                  <div class="col-12 col-md-6 container">
+                    <div class="row">
                       <div
-                        class="col-12 col-lg-4 d-flex justify-content-center">
-                        <button class="btn btn-danger"
+                        class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
+                        <button class="btn btn-danger d-flex"
                           id="toggle-light">accendi</button>
                       </div>
-                      <div class="col-12 col-lg-8">
+                      <div class="col-12 col-lg-8 text-center">
                         <img src="assets/img/white_lamp.png" alt
                           id="light-bulb">
                       </div>
