[upd] perfectioning comments

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="row">
                       <div
                         class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
-                        <button class="btn btn-danger d-flex"
+                        <button class="btn btn-success"
                           id="toggle-light">accendi</button>
                       </div>
                       <div class="col-12 col-lg-8 text-center">
